--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w=="
       crossorigin="anonymous"
     />
-    <link href="/css/app.18349239.css" rel="preload" as="style" />
-    <link href="/js/app.5436082d.js" rel="preload" as="script" />
-    <link href="/js/chunk-vendors.49223ebe.js" rel="preload" as="script" />
-    <link href="/css/app.18349239.css" rel="stylesheet" />
+    <link href="/TaskManagerVue/css/app.18349239.css" rel="preload" as="style" />
+    <link href="/TaskManagerVue/js/app.5436082d.js" rel="preload" as="script" />
+    <link href="/TaskManagerVue/js/chunk-vendors.49223ebe.js" rel="preload" as="script" />
+    <link href="/TaskManagerVue/css/app.18349239.css" rel="stylesheet" />
   </head>
   <body>
     <noscript
@@ -31,7 +31,7 @@
       ></noscript
     >
     <div id="app"></div>
-    <script src="/js/chunk-vendors.49223ebe.js"></script>
-    <script src="/js/app.5436082d.js"></script>
+    <script src="/TaskManagerVue/js/chunk-vendors.49223ebe.js"></script>
+    <script src="/TaskManagerVue/js/app.5436082d.js"></script>
   </body>
 </html>
